--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,9 @@ before_install:
     - sudo apt-get update -qq
     - sudo apt-get install -qq memcached
     - memcached -p 11212 &
+    - go get -d -v ./...
+
+script: go test -v ./...
 
 go:
     - 1.3
