--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ language: go
 before_install:
     - sudo apt-get update -qq
     - sudo apt-get install -qq memcached
+    - memcached -p 11211 &
     - memcached -p 11212 &
     - go get -d -v ./...
 
